# CPPInterpreter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Tests/: BasicTests.cpp  CMakeLists.txt  test.cpp
src/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h  file.txt  main.cpp
src/AST/: AST.cpp  AST.h  NodeVisitor.cpp  NodeVisitor.h  Nodes.cpp  Nodes.h
src/Utils/: File.cpp  File.h
